--- a/heyru.html
+++ b/heyru.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Heyru Bedru</title>
 </head>
 <body>
-
-    This is remore repo
-    <h2>this part is from Heyru</h2>
+    <h1>this is for test</h1>
 </body>
 </html>
